[project]
name = "comfyui-zeptaframepromptmerger"
description = "Custom node that merges general and subject-specific prompts"
version = "1.0.5"
license = {file = "LICENSE"}
dependencies = ["librosa", "numpy", "pillow>=10.3.0", "scipy", "color-matcher", "matplotlib", "huggingface_hub", "transformers", "torch", "opencv-python", "mss"]

[project.urls]
Repository = "https://github.com/Pablerdo/ComfyUI-ZeptaFramePromptMerger"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Pablerdo"
DisplayName = "ComfyUI-ZeptaFramePromptMerger"
Icon = ""
